feat: add semantic skeleton of landing page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Real Estate Pro</title>
   </head>
   <body>
-    <header role="banner">
+    <header>
       <div class="logo"><a href="/">🏠 Real Estate Pro</a></div>
       <nav aria-label="Główne">
         <ul class="menu">
